cell structure creation finished